<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/gradient_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signUpDetailsActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="376dp"
        android:layout_height="817dp"
        android:contentDescription="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.733"
        app:srcCompat="@drawable/logincard" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="66dp"
        android:layout_height="59dp"
        android:contentDescription="@null"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.119"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.875" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="111dp"
        android:layout_height="51dp"
        android:text="@string/signUp_link"
        android:textAlignment="gravity"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.045" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="315dp"
        android:layout_height="56dp"
        android:text="@string/logo_name"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.883" />

    <TextView
        android:id="@+id/textEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_sisplay"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.281"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.021" />

    <EditText
        android:id="@+id/textEmailDetail"
        android:layout_width="265dp"
        android:layout_height="49dp"
        android:background="@drawable/border"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:clickable="true"
        android:focusable="true"
        android:paddingHorizontal="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.07" />

    <TextView
        android:id="@+id/textName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textSurnameDetail"
        app:layout_constraintEnd_toEndOf="@+id/textNameDetail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textNameDetail"
        app:layout_constraintTop_toBottomOf="@+id/textNameDetail" />

    <EditText
        android:id="@+id/textNameDetail"
        android:layout_width="265dp"
        android:layout_height="48dp"
        android:background="@drawable/border"
        android:clickable="true"
        android:focusable="true"
        android:hint="@string/enter_name"
        android:inputType="textPersonName"
        android:paddingHorizontal="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/textEmailDetail"
        app:layout_constraintStart_toStartOf="@+id/textEmailDetail"
        app:layout_constraintTop_toBottomOf="@+id/textEmailDetail"
        app:layout_constraintVertical_bias="0.071" />

    <TextView
        android:id="@+id/textPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_display"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textPasswordDetails"
        app:layout_constraintEnd_toEndOf="@+id/textUserName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textUserName"
        app:layout_constraintTop_toBottomOf="@+id/textUserName"
        app:layout_constraintVertical_bias="0.602" />

    <EditText
        android:id="@+id/textPasswordDetails"
        android:layout_width="265dp"
        android:layout_height="48dp"
        android:background="@drawable/border"
        android:clickable="true"
        android:focusable="true"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingHorizontal="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/textEmailDetail"
        app:layout_constraintStart_toStartOf="@+id/textEmailDetail"
        app:layout_constraintTop_toBottomOf="@+id/textEmailDetail"
        app:layout_constraintVertical_bias="0.706" />

    <TextView
        android:id="@+id/textSurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/surname"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textNameDetail"
        app:layout_constraintEnd_toEndOf="@+id/textEmailDetail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textEmailDetail"
        app:layout_constraintTop_toBottomOf="@+id/textEmailDetail"
        app:layout_constraintVertical_bias="0.6" />

    <EditText
        android:id="@+id/textSurnameDetail"
        android:layout_width="265dp"
        android:layout_height="48dp"
        android:background="@drawable/border"
        android:clickable="true"
        android:focusable="true"
        android:hint="@string/enter_surname"
        android:inputType="textPassword"
        android:paddingHorizontal="12dp"
        app:layout_constraintBottom_toTopOf="@+id/textBirthDate"
        app:layout_constraintEnd_toEndOf="@+id/textName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textName"
        app:layout_constraintTop_toBottomOf="@+id/textNameDetail" />

    <TextView
        android:id="@+id/textDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/birth_date"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/textSurnameDetail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textSurnameDetail"
        app:layout_constraintTop_toBottomOf="@+id/textSurnameDetail"
        app:layout_constraintVertical_bias="0.032" />

    <EditText
        android:id="@+id/textBirthDate"
        android:clickable="true"
        android:focusable="true"
        android:layout_width="265dp"
        android:layout_height="48dp"
        android:background="@drawable/border"
        android:hint="@string/_28_09_2026"
        android:inputType="date"
        android:paddingHorizontal="12dp"
        app:layout_constraintBottom_toTopOf="@+id/textUserName"
        app:layout_constraintEnd_toEndOf="@+id/textDate"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textDate"
        app:layout_constraintTop_toBottomOf="@+id/textNameDetail"
        app:layout_constraintVertical_bias="0.757" />

    <TextView
        android:id="@+id/textUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textUserName"
        app:layout_constraintEnd_toEndOf="@+id/textBirthDate"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textBirthDate"
        app:layout_constraintTop_toBottomOf="@+id/textBirthDate"
        app:layout_constraintVertical_bias="0.625" />

    <EditText
        android:id="@+id/textUserName"
        android:layout_width="265dp"
        android:layout_height="48dp"
        android:background="@drawable/border"
        android:clickable="true"
        android:focusable="true"
        android:hint="@string/enter_username"
        android:inputType="text"
        android:paddingHorizontal="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/textBirthDate"
        app:layout_constraintStart_toStartOf="@+id/textBirthDate"
        app:layout_constraintTop_toBottomOf="@+id/textEmailDetail"
        app:layout_constraintVertical_bias="0.552" />

    <EditText
        android:id="@+id/textConfirmPassword"
        android:layout_width="265dp"
        android:layout_height="48dp"
        android:background="@drawable/border"
        android:clickable="true"
        android:focusable="true"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingHorizontal="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/textEmailDetail"
        app:layout_constraintStart_toStartOf="@+id/textEmailDetail"
        app:layout_constraintTop_toBottomOf="@+id/textEmailDetail"
        app:layout_constraintVertical_bias="0.786" />

    <Button
        android:id="@+id/signUpbutton"
        android:layout_width="204dp"
        android:layout_height="48dp"
        android:layout_marginBottom="52dp"
        android:background="@drawable/loginbutton"
        android:text="@string/signupButton"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/textConfirmPassword"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="@+id/textConfirmPassword" />

    <TextView
        android:id="@+id/textTermsPrivacyPolicy"
        android:layout_width="213dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/terms_privacy_policy"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/signUpbutton"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toStartOf="@+id/signUpbutton"
        app:layout_constraintTop_toBottomOf="@+id/signUpbutton"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>