<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".signUpSection">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="351dp"
        android:layout_height="345dp"
        android:contentDescription="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499"
        app:srcCompat="@drawable/logincard" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="193dp"
        android:layout_height="43dp"
        android:text="@string/signUp_link"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textFontWeight="1000"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.046" />


    <TextView
        android:id="@+id/textWelcome"
        android:layout_width="363dp"
        android:layout_height="44dp"
        android:text="@string/logo_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textFontWeight="1000"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.516" />

    <TextView
        android:id="@+id/textWelcomeMessage"
        android:layout_width="439dp"
        android:layout_height="105dp"
        android:text="@string/welcome_message"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textFontWeight="1000"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textWelcome"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button2"
        android:layout_width="264dp"
        android:layout_height="47dp"
        android:background="@drawable/border"
        android:drawableStart="@drawable/gmailbutton"
        android:drawablePadding="16dp"
        android:gravity="start|center_vertical"
        android:paddingStart="36dp"
        android:text="@string/login_with_google"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="325dp"
        android:layout_height="35dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.559"
        app:layout_constraintStart_toStartOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_bias="0.019"
        app:srcCompat="@drawable/or" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="256dp"
        android:layout_height="48dp"
        android:layout_marginBottom="172dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/login_link"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0" />


    <EditText
        android:id="@+id/signUpEmailAddress"
        android:layout_width="265dp"
        android:layout_height="47dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:paddingStart="5dp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.566"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <Button
        android:id="@+id/signUpbutton"
        android:layout_width="158dp"
        android:layout_height="39dp"
        android:background="@drawable/loginbutton"
        android:text="@string/signupButton"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/signUpEmailAddress"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="@+id/signUpEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/signUpEmailAddress"
        app:layout_constraintVertical_bias="0.344" />

    <TextView
        android:id="@+id/textTermsPrivacyPolicy"
        android:layout_width="157dp"
        android:layout_height="35dp"
        android:text="@string/terms_privacy_policy"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/signUpbutton"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="@+id/signUpbutton"
        app:layout_constraintTop_toBottomOf="@+id/signUpbutton"
        app:layout_constraintVertical_bias="0.575" />

</androidx.constraintlayout.widget.ConstraintLayout>